--- a/vendor-panel/vercel.json
+++ b/vendor-panel/vercel.json
@@ -1,3 +1,5 @@
 {
+  "buildCommand": "npm run build:preview",
+  "outputDirectory": "dist",
   "rewrites": [{ "source": "/(.*)", "destination": "/" }]
 }
